src/css/custom.css
h1,
h2,
h3,
h4,
h5,
span,
p {
  margin: 0;
  mso-line-height-rule: exactly;
}

.block-text {
  @apply font-body text-base;
}

.article-columns > tbody > tr > td {
  @apply w-1/2 align-top;

  &:first-of-type {
    @apply pr-8;
  }

  &:last-of-type {
    @apply pl-8;
  }
  }
}

.article-tag {
  @apply block font-body tracking-[2px] pt-12 text-xs uppercase leading-[1];
}

